--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+*{
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -6,15 +10,25 @@ body {
   background-color: #f4f4f4;
 }
 
+h1 span {
+  font-size: 0.3em;
+}
+
+#gameWrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  margin: auto;
+}
+
 #gameArea {
   position: relative;
   width: 100%;
-  height: 90vh;
+  height: 70vh; /* Adjusted height to leave space for controls */
   background-color: #fbf5f5;
   border: 2px solid #ccc;
   overflow: hidden;
-  max-width: 600px;
-  margin: auto;
 }
 
 #player {
@@ -26,11 +40,11 @@ body {
   background-color: rgb(39, 39, 111);
   transition: left 0.1s;
 }
-h1 span{
-  font-size: 0.3em;
-}
+
 .obstacle {
+
   position: absolute;
+  border: solid black 0.5em;
   width: 10%;
   height: 20px;
   background-color: rgb(181, 238, 49);
@@ -39,16 +53,39 @@ h1 span{
 .laser {
   position: absolute;
   width: 2%;
-  height: 4% ;
+  height: 4%;
   background-color: rgb(248, 8, 8);
   z-index: 10;
 }
 
 #score {
   font-size: 24px;
-  margin-top: 20px;
+  margin-top: 10px;
 }
 
+#controls {
+  display: flex;
+  justify-content: space-around;
+  width: 100%;
+  background-color: #333;
+  padding: 10px;
+}
+
+#controls button {
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  font-size: 24px;
+  background-color: #444;
+  color: white;
+  border: none;
+  cursor: pointer;
+  outline: none;
+}
+
+#controls button:active {
+  background-color: #555;
+}
 
 @media (max-width: 768px) {
   #player {
@@ -70,28 +107,22 @@ h1 span{
     font-size: 18px;
   }
 
-  #controls {
-    position: fixed;
-    bottom: 20px;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    gap: 10px;
-  }
-
   #controls button {
-    width: 60px;
-    height: 60px;
-    border-radius: 50%;
-    font-size: 24px;
-    background-color: #333;
-    color: white;
-    border: none;
-    cursor: pointer;
-    outline: none;
+    width: 50px;
+    height: 50px;
+    font-size: 18px;
   }
 
-  #controls button:active {
-    background-color: #555;
+  .obstacle.fast {
+    background-color: red;
   }
+
+  .obstacle.shooter {
+    background-color: purple;
+  }
+
+  .laser.enemy {
+    background-color: blue;
+  }
+
 }
