--- a/style.css
+++ b/style.css
@@ -1,14 +1,48 @@
-*{
+* {
   box-sizing: border-box;
-}
-
-body {
   margin: 0;
   padding: 0;
-  font-family: Arial, sans-serif;
-  text-align: center;
-  background-color: #f4f4f4;
+  color: white;
 }
+body {
+  overflow: hidden;
+  background: black;
+  position: relative;
+  font-family: sans-serif;
+}
+
+
+.stars {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  z-index: -1;
+  overflow: hidden;
+  background: black;
+}
+
+.star {
+  position: absolute;
+  width: 2px;
+  height: 2px;
+  background: white;
+  border-radius: 50%;
+  animation: drift 60s linear infinite;
+}
+
+
+@keyframes drift {
+  0% {
+    transform: translateY(0);
+  }
+  100% {
+    transform: translateY(-2000px);
+  }
+}
+
+
 
 h1 span {
   font-size: 0.3em;
@@ -25,30 +59,37 @@ h1 span {
 #gameArea {
   position: relative;
   width: 100%;
-  height: 70vh; /* Adjusted height to leave space for controls */
-  background-color: #fbf5f5;
+  height: 70vh;
+  background-color: rgba(251, 245, 245, 0);
   border: 2px solid #ccc;
   overflow: hidden;
+
 }
 
 #player {
   position: absolute;
   bottom: 10px;
-  left: 50%;
-  width: 50px;
-  height: 50px;
+  width:10%;
+  height: 10%;
   background-color: rgb(39, 39, 111);
+  clip-path: polygon(50% 0%, 0% 100%, 100% 100%);
   transition: left 0.1s;
+
 }
 
-.obstacle {
+
+.enemy {
 
   position: absolute;
-  border: solid black 0.5em;
-  width: 10%;
-  height: 20px;
-  background-color: rgb(181, 238, 49);
-}
+
+  width: 8%;
+  height: 8%;
+
+    background-color: brown;
+    border-radius: 50%;
+
+  }
+
 
 .laser {
   position: absolute;
@@ -62,51 +103,22 @@ h1 span {
   font-size: 24px;
   margin-top: 10px;
 }
-
-.obstacle.fast {
-  background-color: red;
+.enemy.fast,
+.enemy.shooter {
+  width: 10%;
+  height: 3%;
+  clip-path: polygon(50% 100%, 0 0, 100% 0);
+  border-radius: 0;
 }
-
-.obstacle.shooter {
-  background-color: purple;
+.enemy.fast{
+  background-color: yellow;
 }
-
+.enemy.shooter{
+  background-color: rebeccapurple;
+}
 .laser.enemy {
   background-color: blue;
 }
 
 
 
-@media (max-width: 768px) {
-  #player {
-    width: 40px;
-    height: 40px;
-  }
-
-  .obstacle {
-    width: 8%;
-    height: 8%;
-  }
-
-  .laser {
-    width: 1.5%;
-    height: 3%;
-  }
-
-  #score {
-    font-size: 18px;
-  }
-
-  .obstacle.fast {
-    background-color: red;
-  }
-
-  .obstacle.shooter {
-    background-color: purple;
-  }
-
-  .laser.enemy {
-    background-color: blue;
-  }
-
-}
